fix channel page not stretching, fix non-root paths not opening

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,6 @@
 .app-root {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
